[gd_scene load_steps=12 format=3 uid="uid://bpqx6586q8y2s"]

[ext_resource type="Script" uid="uid://ti1ouh7gaytn" path="res://scripts/enemys/SimpleEnemy.gd" id="1_ek7tt"]
[ext_resource type="PackedScene" uid="uid://b5r1v2wvjl4r2" path="res://scenes/particles/EnemyDeath_prt.tscn" id="2_3bcq2"]
[ext_resource type="PackedScene" uid="uid://b5cqjim3ufhp5" path="res://scenes/componets/HealthComponent.tscn" id="3_11ysd"]
[ext_resource type="PackedScene" uid="uid://deq7gvba5j8l8" path="res://scenes/componets/HurtboxComponent.tscn" id="4_nx8p6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pbuog"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_2sjnj"]
polygon = PackedVector2Array(0, -10, -9, -5, -9, 4, 0, 10, 9, 4, 9, -5)

[sub_resource type="Animation" id="Animation_w88n2"]
resource_name = "Dead"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LightOccluder2D:sdf_collision")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dgu4m"]
resource_name = "Death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyDeath_prt:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LightOccluder2D:sdf_collision")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Polygon2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Components/HurtboxComponent/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4esjb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyDeath_prt:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LightOccluder2D:sdf_collision")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Polygon2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Components/HurtboxComponent/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_voxl0"]
_data = {
&"Dead": SubResource("Animation_w88n2"),
&"Death": SubResource("Animation_dgu4m"),
&"RESET": SubResource("Animation_4esjb")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_t47dm"]

[node name="SimpleEnemy" type="CharacterBody2D" groups=["Enemys", "WeakEnemys"]]
collision_layer = 7
collision_mask = 7
motion_mode = 1
script = ExtResource("1_ek7tt")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pbuog")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.202723, 0.202723, 0.202723, 1)
polygon = PackedVector2Array(0, -10, -9, -5, -9, 4, 0, 10, 9, 4, 9, -5)

[node name="EnemyDeath_prt" parent="." instance=ExtResource("2_3bcq2")]
lifetime = 0.4
initial_velocity_max = 300.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_2sjnj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_voxl0")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
radius = 1300.0
neighbor_distance = 15000.0
debug_enabled = true

[node name="pathRefreshTimer" type="Timer" parent="."]
wait_time = 0.055
autostart = true

[node name="Components" type="Node2D" parent="."]

[node name="HealthComponent" parent="Components" instance=ExtResource("3_11ysd")]
HealthPoints = 2

[node name="HurtboxComponent" parent="Components" node_paths=PackedStringArray("health_component") instance=ExtResource("4_nx8p6")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/HurtboxComponent"]
shape = SubResource("CircleShape2D_t47dm")
debug_color = Color(0.989415, 0, 0.290723, 0.42)

[connection signal="timeout" from="pathRefreshTimer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Components/HurtboxComponent" to="." method="_on_hurtbox_component_area_entered"]
